@@ -1,7 +1,3 @@
-%Error-PKGNODECL: t/t_vlt_match_error.v:17:12: Package/class 'hi' not found, and needs to be predeclared (IEEE 1800-2023 26.3)
-   17 |     import hi::*;
-      |            ^~
-                  ... For error description see https://verilator.org/warn/PKGNODECL?v=latest
 %Error: t/t_vlt_match_error.v:17:12: Importing from missing package 'hi'
    17 |     import hi::*;
       |            ^~
